--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Arduino library to control Music Shield, it is based on the VC1053B ch
 category=Device Control
 url=https://github.com/Seeed-Studio/Music_Shield
 architectures=*
+depends=SD
