--- a/.travis.yml
+++ b/.travis.yml
@@ -3,108 +3,37 @@ matrix:
   include:
     - env:
         - BOARD="arduino:avr:uno"
+      install:
+        - arduino-cli core update-index
+        - arduino-cli core install arduino:avr
     - env:
         - BOARD="Seeeduino:samd:seeed_XIAO_m0"
+      install:
+        - arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
+        - arduino-cli core install Seeeduino:samd --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
 # default phases
 before_install:
   - mkdir -p "$HOME/bin"
   - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR="$HOME/bin" sh
   - export PATH="$PATH:$HOME/bin"
-  - arduino-cli core update-index --additional-urls https://downloads.arduino.cc/packages/package_index.json
-  - arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
-  - arduino-cli  core install arduino:avr --additional-urls https://downloads.arduino.cc/packages/package_index.json
-  - arduino-cli  core install Seeeduino:samd --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
-  - |
-    installLibrary() {
-      local -r repositoryFullName="$1"
-      local -r repositoryName="${repositoryFullName##*/}"
-      # clone repository to the libraries folder of the sketchbook
-      git clone https://github.com/${repositoryFullName} "${HOME}/Arduino/libraries/${repositoryName}"
-      cd "${HOME}/Arduino/libraries/${repositoryName}"
-      cd "${TRAVIS_BUILD_DIR}"
-    }
-  - installLibrary Seeed-Studio/Music_Shield
   - buildExampleSketch() { arduino-cli compile  --warnings all --fqbn $BOARD $PWD/examples/$1 --verbose; }
   - buildExampleUtilitySketch() { arduino-cli compile --warnings all --fqbn $BOARD $PWD/examples/utility/$1 --verbose; }
-install:
-  - mkdir -p $HOME/Arduino/libraries
+  - arduino-cli lib install SD
+  - mkdir -p "$HOME/Arduino/libraries"
+  - ln -s "$PWD" "$HOME/Arduino/libraries/."
 script:
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch playWithName;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch createList;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch analogInputControl;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch digitalInputControl;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch keyDisable;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch addToList;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch extIntControl;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch switchSongWithName;
-      fi
-    - |
-      if [ "$BOARD" == "arduino:avr:uno" ]; then
-        buildExampleSketch MidiDemoPlayer;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch playWithName;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch createList;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch analogInputControl;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch digitalInputControl;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch keyDisable;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch addToList;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch extIntControl;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch switchSongWithName;
-      fi
-    - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
-        buildExampleSketch MidiDemoPlayer;
-      fi
+  - buildExampleSketch playWithName
+  - buildExampleSketch createList
+  - buildExampleSketch analogInputControl
+  - buildExampleSketch digitalInputControl
+  - buildExampleSketch keyDisable
+  - buildExampleSketch addToList
+  - buildExampleSketch extIntControl
+  - buildExampleSketch switchSongWithName
+  - buildExampleSketch MidiDemoPlayer
 notifications:
   webhooks:
     urls:
       - https://www.travisbuddy.com/
     on_success: never
     on_failure: always
-
