--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,15 @@ matrix:
     - env:
         - BOARD="arduino:avr:uno"
     - env:
-        - BOARD="Seeeduino:samd:seeed_XIAO_m0"
+        - BOARD="arduino:sam:arduino_due_x"
 # default phases
 before_install:
   - mkdir -p "$HOME/bin"
   - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR="$HOME/bin" sh
   - export PATH="$PATH:$HOME/bin"
   - arduino-cli core update-index --additional-urls https://downloads.arduino.cc/packages/package_index.json
-  - arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
   - arduino-cli  core install arduino:avr --additional-urls https://downloads.arduino.cc/packages/package_index.json
-  - arduino-cli  core install Seeeduino:samd --additional-urls https://raw.githubusercontent.com/Seeed-Studio/Seeed_Platform/master/package_seeeduino_boards_index.json
+  - arduino-cli  core install arduino:sam --additional-urls  https://downloads.arduino.cc/packages/package_index.json
   - |
     installLibrary() {
       local -r repositoryFullName="$1"
@@ -24,6 +23,7 @@ before_install:
       cd "${TRAVIS_BUILD_DIR}"
     }
   - installLibrary Seeed-Studio/Music_Shield
+  - installLibrary arduino-libraries/SD
   - buildExampleSketch() { arduino-cli compile  --warnings all --fqbn $BOARD $PWD/examples/$1 --verbose; }
   - buildExampleUtilitySketch() { arduino-cli compile --warnings all --fqbn $BOARD $PWD/examples/utility/$1 --verbose; }
 install:
@@ -66,39 +66,39 @@ script:
         buildExampleSketch MidiDemoPlayer;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch playWithName;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch createList;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch analogInputControl;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch digitalInputControl;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch keyDisable;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch addToList;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch extIntControl;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch switchSongWithName;
       fi
     - |
-      if [ "$BOARD" == "Seeeduino:samd:seeed_XIAO_m0" ]; then
+      if [ "$BOARD" == "arduino:sam:arduino_due_x" ]; then
         buildExampleSketch MidiDemoPlayer;
       fi
 notifications:
